--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
   <div class="container">
     <div class="input-section">
       <h1>🎬 Letterboxd Recommender Pro</h1>
+      <div style="margin-top: -10px; margin-bottom: 20px; font-size: 0.85rem;">
+        Coded with ❤️ by 
+        <a href="https://github.com/based-on-what/letterboxd-recommender" 
+          target="_blank" 
+          style="color: #00e054; text-decoration: none; font-weight: bold;">
+          @based-on-what
+        </a>
+      </div>
       <div id="user-location" class="country-tag">Detecting location...</div>
       <div class="input-group">
         <input type="text" id="username" placeholder="Your Letterboxd username" onkeypress="if(event.key==='Enter')startProcess()">
