--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 <body>
   <div class="input-section">
     <h1>🎬 Letterboxd Recommender</h1>
+    <div style="color: #666; margin-bottom: 15px; font-size: 0.85rem;">
+      Coded by <a href="https://github.com/based-on-what/letterboxd-recommender" target="_blank" rel="noopener noreferrer" style="color: #00e054; text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='#00ff5e'" onmouseout="this.style.color='#00e054'">@based-on-what</a>
+    </div>
     <div style="color: #888; margin-bottom: 10px; font-size: 0.9rem;">
       Enter your username to generate recommendations.
     </div>
